k8s/employee/employee-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: employee
  name: employee-svc
  namespace: default
spec:
  ports:
  - name: 8080-8080
    nodePort: 32644
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: employee
  type: NodePort
