k8s/employee/employee-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: employee.example.com
    http:
      paths:
      - path: /api/v1/employee
        pathType: Prefix
        backend:
          service:
            name: employee-svc 
            port:
              number: 8081
